# actix_web_server

./: .env  .env.example  Cargo.toml  LICENSE  README.md  docker-compose.db.yml  docker-compose.yml  dockerfile
.github/workflows/: release-packaging.yml  simple-ci.yml  test.yml
certs/: cert.pem  generate.txt  private_key.pem
migrations/: 20241119145724_create_users_table.down.sql  20241119145724_create_users_table.up.sql  20241129205948_create_user_index.down.sql  20241129205948_create_user_index.up.sql  analize  test.sql
src/: lib.rs  main.rs  router.rs  server.rs
src/auth/: auth_handler.rs  auth_service.rs
src/auth/dto/: jwt_dto.rs  login_dto.rs
src/config/: app_config.rs  builder.rs  config_loader.rs  db_config.rs  mod.rs
src/configs/: config_conn.rs  config_env.rs  config_load.rs  config_tls.rs
src/db/: connection.rs  mod.rs
src/middleware/: logger.rs
src/middlewares/: middleware_auth.rs  middleware_logger.rs
src/routes/: mod.rs
src/users/: users_handler.rs  users_query.rs  users_service.rs  users_service_test.rs
src/users/dto/: create_users_dto.rs  get_users_dto.rs  update_users_dto.rs
src/users/entity/: users_model.rs
src/utils/: auth.rs  errors.rs  init_logger.rs  jwt.rs  logger.rs  mod.rs  password.rs  query_builder.rs  query_paginaton.rs  response_data.rs  time.rs
tests/: health_check.rs  main.rs  test_establish_connection.rs  test_query_builder.rs
