[package]
name = "web_server"
version = "0.1.1"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
actix-web = { version = "4.9.0", features = ["rustls-0_23"] }
actix-cors = "0.7.0"
actix-rt = "2.10.0"
rustls-pemfile = "2.2.0"
rustls = "0.23.18"
futures = "0.3.31"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_qs = { version = "0.13.0", features = ["actix4"] }
mockall = "0.13.1"
async-trait = "0.1.83"
jsonwebtoken = "9"
env_logger = "0.11.5"
log = "0.4.22"
validator = { version = "0.19.0", features = ["derive"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
fake = "3.0.1"
